--- a/resources/ui/wiibafu.ui
+++ b/resources/ui/wiibafu.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>700</width>
-    <height>550</height>
+    <width>800</width>
+    <height>600</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -284,7 +284,7 @@
           <property name="frameShadow">
            <enum>QFrame::Raised</enum>
           </property>
-          <layout class="QHBoxLayout" name="horizontalLayout_31">
+          <layout class="QHBoxLayout" name="horizontalLayout_39">
            <item>
             <layout class="QVBoxLayout" name="verticalLayout_5">
              <item>
@@ -293,7 +293,7 @@
                 <widget class="QLabel" name="label">
                  <property name="minimumSize">
                   <size>
-                   <width>60</width>
+                   <width>110</width>
                    <height>24</height>
                   </size>
                  </property>
@@ -317,7 +317,7 @@
                 <widget class="QLabel" name="label_2">
                  <property name="minimumSize">
                   <size>
-                   <width>60</width>
+                   <width>110</width>
                    <height>24</height>
                   </size>
                  </property>
@@ -341,7 +341,7 @@
                 <widget class="QLabel" name="label_3">
                  <property name="minimumSize">
                   <size>
-                   <width>60</width>
+                   <width>110</width>
                    <height>24</height>
                   </size>
                  </property>
@@ -365,7 +365,7 @@
                 <widget class="QLabel" name="label_4">
                  <property name="minimumSize">
                   <size>
-                   <width>60</width>
+                   <width>110</width>
                    <height>24</height>
                   </size>
                  </property>
@@ -389,7 +389,7 @@
                 <widget class="QLabel" name="label_5">
                  <property name="minimumSize">
                   <size>
-                   <width>60</width>
+                   <width>110</width>
                    <height>24</height>
                   </size>
                  </property>
@@ -408,22 +408,118 @@
               </layout>
              </item>
              <item>
+              <layout class="QHBoxLayout" name="horizontalLayout_36">
+               <item>
+                <widget class="QLabel" name="label_22">
+                 <property name="minimumSize">
+                  <size>
+                   <width>110</width>
+                   <height>24</height>
+                  </size>
+                 </property>
+                 <property name="text">
+                  <string>Used blocks:</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QLineEdit" name="lineEdit_info_UsedBlocks">
+                 <property name="readOnly">
+                  <bool>true</bool>
+                 </property>
+                </widget>
+               </item>
+              </layout>
+             </item>
+             <item>
               <layout class="QHBoxLayout" name="horizontalLayout_10">
                <item>
                 <widget class="QLabel" name="label_6">
                  <property name="minimumSize">
                   <size>
-                   <width>60</width>
+                   <width>110</width>
                    <height>24</height>
                   </size>
                  </property>
                  <property name="text">
-                  <string>Date:</string>
+                  <string>Insertion:</string>
                  </property>
                 </widget>
                </item>
                <item>
-                <widget class="QLineEdit" name="lineEdit_info_Date">
+                <widget class="QLineEdit" name="lineEdit_info_Insertion">
+                 <property name="readOnly">
+                  <bool>true</bool>
+                 </property>
+                </widget>
+               </item>
+              </layout>
+             </item>
+             <item>
+              <layout class="QHBoxLayout" name="horizontalLayout_15">
+               <item>
+                <widget class="QLabel" name="label_8">
+                 <property name="minimumSize">
+                  <size>
+                   <width>110</width>
+                   <height>24</height>
+                  </size>
+                 </property>
+                 <property name="text">
+                  <string>Last modification:</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QLineEdit" name="lineEdit_info_LastModification">
+                 <property name="readOnly">
+                  <bool>true</bool>
+                 </property>
+                </widget>
+               </item>
+              </layout>
+             </item>
+             <item>
+              <layout class="QHBoxLayout" name="horizontalLayout_19">
+               <item>
+                <widget class="QLabel" name="label_9">
+                 <property name="minimumSize">
+                  <size>
+                   <width>110</width>
+                   <height>24</height>
+                  </size>
+                 </property>
+                 <property name="text">
+                  <string>Last status change:</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QLineEdit" name="lineEdit_info_LastStatusChange">
+                 <property name="readOnly">
+                  <bool>true</bool>
+                 </property>
+                </widget>
+               </item>
+              </layout>
+             </item>
+             <item>
+              <layout class="QHBoxLayout" name="horizontalLayout_20">
+               <item>
+                <widget class="QLabel" name="label_10">
+                 <property name="minimumSize">
+                  <size>
+                   <width>110</width>
+                   <height>24</height>
+                  </size>
+                 </property>
+                 <property name="text">
+                  <string>Last access:</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QLineEdit" name="lineEdit_info_LastAccess">
                  <property name="readOnly">
                   <bool>true</bool>
                  </property>
@@ -437,7 +533,7 @@
                 <widget class="QLabel" name="label_7">
                  <property name="minimumSize">
                   <size>
-                   <width>60</width>
+                   <width>110</width>
                    <height>24</height>
                   </size>
                  </property>
@@ -456,17 +552,65 @@
               </layout>
              </item>
              <item>
-              <layout class="QHBoxLayout" name="horizontalLayout_12">
+              <layout class="QHBoxLayout" name="horizontalLayout_37">
                <item>
-                <widget class="QLabel" name="infolabel_Info_FileName">
+                <widget class="QLabel" name="label_21">
                  <property name="minimumSize">
                   <size>
-                   <width>60</width>
+                   <width>110</width>
                    <height>24</height>
                   </size>
                  </property>
                  <property name="text">
-                  <string>File name:</string>
+                  <string>Container:</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QLineEdit" name="lineEdit_info_Container">
+                 <property name="readOnly">
+                  <bool>true</bool>
+                 </property>
+                </widget>
+               </item>
+              </layout>
+             </item>
+             <item>
+              <layout class="QHBoxLayout" name="horizontalLayout_38">
+               <item>
+                <widget class="QLabel" name="label_23">
+                 <property name="minimumSize">
+                  <size>
+                   <width>110</width>
+                   <height>24</height>
+                  </size>
+                 </property>
+                 <property name="text">
+                  <string>WBFS slot:</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QLineEdit" name="lineEdit_info_WBFSSlot">
+                 <property name="readOnly">
+                  <bool>true</bool>
+                 </property>
+                </widget>
+               </item>
+              </layout>
+             </item>
+             <item>
+              <layout class="QHBoxLayout" name="horizontalLayout_12">
+               <item>
+                <widget class="QLabel" name="lanel_8">
+                 <property name="minimumSize">
+                  <size>
+                   <width>110</width>
+                   <height>24</height>
+                  </size>
+                 </property>
+                 <property name="text">
+                  <string>File/Partition:</string>
                  </property>
                 </widget>
                </item>
@@ -571,13 +715,19 @@
                <property name="sizeHint" stdset="0">
                 <size>
                  <width>20</width>
-                 <height>10</height>
+                 <height>20</height>
                 </size>
                </property>
               </spacer>
              </item>
              <item>
               <layout class="QHBoxLayout" name="horizontalLayout_16">
+               <property name="topMargin">
+                <number>5</number>
+               </property>
+               <property name="bottomMargin">
+                <number>5</number>
+               </property>
                <item>
                 <spacer name="horizontalSpacer_3">
                  <property name="orientation">
@@ -710,6 +860,12 @@
              </item>
              <item>
               <layout class="QHBoxLayout" name="horizontalLayout_17">
+               <property name="topMargin">
+                <number>5</number>
+               </property>
+               <property name="bottomMargin">
+                <number>5</number>
+               </property>
                <item>
                 <spacer name="horizontalSpacer_5">
                  <property name="orientation">
@@ -765,6 +921,12 @@
              </item>
              <item>
               <layout class="QHBoxLayout" name="horizontalLayout_18">
+               <property name="topMargin">
+                <number>5</number>
+               </property>
+               <property name="bottomMargin">
+                <number>5</number>
+               </property>
                <item>
                 <spacer name="horizontalSpacer_7">
                  <property name="orientation">
@@ -903,7 +1065,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>700</width>
+     <width>800</width>
      <height>21</height>
     </rect>
    </property>
