--- a/resources/ui/wiibafu.ui
+++ b/resources/ui/wiibafu.ui
@@ -211,6 +211,9 @@
              <property name="value">
               <number>0</number>
              </property>
+             <property name="format">
+              <string/>
+             </property>
             </widget>
            </item>
           </layout>
