--- a/resources/ui/wiibafu.ui
+++ b/resources/ui/wiibafu.ui
@@ -157,7 +157,7 @@
        </attribute>
        <layout class="QVBoxLayout" name="verticalLayout_6">
         <item>
-         <widget class="QTableView" name="tableView_HDD"/>
+         <widget class="QTableView" name="tableView_WBFS"/>
         </item>
         <item>
          <widget class="QFrame" name="frame_4">
