--- a/resources/ui/wiibafu.ui
+++ b/resources/ui/wiibafu.ui
@@ -1034,30 +1034,45 @@
      <height>21</height>
     </rect>
    </property>
-   <widget class="QMenu" name="menuWiiBackupFusion">
+   <property name="mouseTracking">
+    <bool>false</bool>
+   </property>
+   <widget class="QMenu" name="menuFile">
+    <property name="mouseTracking">
+     <bool>false</bool>
+    </property>
     <property name="title">
      <string>&amp;File</string>
     </property>
     <addaction name="actionExit"/>
    </widget>
    <widget class="QMenu" name="menuOptions">
+    <property name="mouseTracking">
+     <bool>false</bool>
+    </property>
     <property name="title">
      <string>Options</string>
     </property>
    </widget>
    <widget class="QMenu" name="menuTools">
+    <property name="mouseTracking">
+     <bool>false</bool>
+    </property>
     <property name="title">
      <string>Tools</string>
     </property>
    </widget>
    <widget class="QMenu" name="menuHelp">
+    <property name="mouseTracking">
+     <bool>false</bool>
+    </property>
     <property name="title">
      <string>Help</string>
     </property>
     <addaction name="actionAbout"/>
     <addaction name="actionAbout_Qt"/>
    </widget>
-   <addaction name="menuWiiBackupFusion"/>
+   <addaction name="menuFile"/>
    <addaction name="menuOptions"/>
    <addaction name="menuTools"/>
    <addaction name="menuHelp"/>
