--- a/resources/ui/settings.ui
+++ b/resources/ui/settings.ui
@@ -179,7 +179,7 @@
         </widget>
        </item>
        <item row="3" column="1">
-        <widget class="QComboBox" name="main_comboBox_LogOutput">
+        <widget class="QComboBox" name="main_comboBox_Logging">
          <property name="sizePolicy">
           <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
            <horstretch>0</horstretch>
